--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hola plandet muchachos </p>
+    <p>hola plandet muchachos vamos conectando git pxs</p>
 </body>
 </html>
